--- a/PagesMenu/Index_DéliceDesSens.html
+++ b/PagesMenu/Index_DéliceDesSens.html
@@ -9,7 +9,7 @@
 	<title>Ohmyfood | Le délice des sens</title>
 	<link rel="stylesheet" type="text/css" href="style_menu.css">
 	<link rel="stylesheet" href="../Icones/css/all.css">
-	<link rel="icon" href="../Images/logo/favicon.jpg" type="image/gif" sizes="16x16">
+	<link rel="icon" href="../Images/logo/favicon.png" type="image/gif" sizes="16x16">
 
 </head>
 
