--- a/Index.html
+++ b/Index.html
@@ -74,8 +74,8 @@
 
 					<h3>À propos de nous</h3>
 
-					<p>Ohmyfood est une entreprise dont le but est de permettre au clients des restaurateurs de pouvoir commender leur repas en ligne.<br> L'objectif est de réduire le temps d'attente dans le restaurant.
-					Ce concept a fait ses preuves à NewYork, nous souhaitons désormais nous élargir dans la capitale de la gastronomie : Paris.</p>
+					<p>Ohmyfood est une entreprise dont le but est de permettre au clients des restaurateurs de pouvoir commander leurs repas en ligne.<br> L'objectif est de réduire le temps d'attente dans le restaurant.
+					Ce concept a fait ses preuves à NewYork, nous souhaitons désormais nous élargir dans la capitale de la gastronomie: Paris.</p>
 
 				</article>
 
