:V 2.2.4: Redimension des images

--- a/PagesMenu/Index_DéliceDesSens.html
+++ b/PagesMenu/Index_DéliceDesSens.html
@@ -23,7 +23,7 @@
 
 		<picture>
 			
-			<img src="../Images/restaurants/délices_des_sens.jpg" alt="images du restaurants le délice des sens">
+			<img src="../Images/restaurants/Menu/délices_des_sens.jpg" alt="images du restaurants le délice des sens">
 
 		</picture>
 
